# service/types/api.type.ts
@@ -1,0 +1,16 @@
+export interface TeamBuilding {
+    userId: string;
+    userName: string;
+    teamName: string;
+    playerCount: number;
+    ownerCount: number;
+    keyword: string;
+}
+export interface TeamJoining {
+    hostId: string;
+    userId: string;
+    userName: string;
+    teamId: string;
+    playerCount: number;
+    ownerCount: number;
+}
